--- a/Bangazon/Views/Orders/Details.cshtml
+++ b/Bangazon/Views/Orders/Details.cshtml
@@ -11,28 +11,28 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreated)
+            Date Created:
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateCreated)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCompleted)
+            Date Completed:
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateCompleted)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
+            User:
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
+            @Html.DisplayFor(model => model.User.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PaymentType)
+            Payment Type:
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PaymentType.AccountNumber)
+            @Html.DisplayFor(model => model.PaymentType.Description)
         </dd>
     </dl>
 </div>
