--- a/Bangazon/Views/Orders/Index.cshtml
+++ b/Bangazon/Views/Orders/Index.cshtml
@@ -47,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.PaymentType.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OrderProducts.)
+                @Html.DisplayFor(modelItem => item.OrderProducts)
             </td>
             <td></td>
             <td>
