--- a/Bangazon/Views/Orders/Index.cshtml
+++ b/Bangazon/Views/Orders/Index.cshtml
@@ -46,9 +46,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PaymentType.Description)
             </td>
+            @foreach (var product in Model) {
             <td>
                 @Html.DisplayFor(modelItem => item.OrderProducts)
             </td>
+            }
             <td></td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
