--- a/Bangazon/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Bangazon/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -23,17 +23,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="LastName">Last Name</label>
-                <input asp-for="LastName" class="form-control" disabled />
+                <input asp-for="LastName" class="form-control"  />
                 @*<span asp-validation-for="Input.LastName" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="Address">Address</label>
-                <input asp-for="Address" class="form-control" disabled />
+                <input asp-for="Address" class="form-control"  />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PhoneNumber">Phone Number</label>
-                <input asp-for="PhoneNumber" class="form-control" disabled />
+                <input asp-for="PhoneNumber" class="form-control"  />
                 @*<span asp-validation-for="PhoneNumber" class="text-danger"></span>*@
             </div>
             <div class="form-group">
