--- a/Bangazon/Views/Orders/Details.cshtml
+++ b/Bangazon/Views/Orders/Details.cshtml
@@ -10,7 +10,7 @@
     <h4>Order</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
@@ -23,9 +23,9 @@
                         <th></th>
                     </tr>
                 </thead>
-                    <tbody>
-                        @foreach (var product in Model.OrderProducts)
-                        {
+                <tbody>
+                    @foreach (var product in Model.OrderProducts)
+                    {
                         <tr>
                             <td>
                                 @Html.DisplayFor(modelItem => product.Product.Title)
@@ -33,11 +33,15 @@
                             <td>
                                 @Html.DisplayFor(modelItem => product.Product.Price)
                             </td>
+
                         </tr>
-                        }
-                    </tbody>
-                
+                    }
+                </tbody>
             </table>
+        <td>
+            Total: @Model.OrderProducts.Sum(i => i.Product.Price)
+        </td>
+            
         </dt>
     </dl>
 </div>
