--- a/Bangazon/Views/Products/Create.cshtml
+++ b/Bangazon/Views/Products/Create.cshtml
@@ -30,10 +30,10 @@
                 <input asp-for="product.Quantity" class="form-control" />
                 <span asp-validation-for="product.Quantity" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="product.UserId" class="control-label"></label>
-                <select asp-for="product.UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-            </div>
+            @*<div class="form-group">
+                    <label asp-for="product.UserId" class="control-label"></label>
+                    <select asp-for="product.UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+                </div>*@
             <div class="form-group">
                 <label asp-for="product.City" class="control-label"></label>
                 <input asp-for="product.City" class="form-control" />
