--- a/Bangazon/Views/Orders/Details.cshtml
+++ b/Bangazon/Views/Orders/Details.cshtml
@@ -39,7 +39,7 @@
         <td>
             Total: @Model.OrderProducts.Sum(i => i.Product.Price)
         </td>
-            
+            <a asp-action="Create" asp-route="@Model.PaymentType.Description">Complete Order</a>
         </dt>
     </dl>
 </div>
