--- a/Bangazon/Views/Shared/_Layout.cshtml
+++ b/Bangazon/Views/Shared/_Layout.cshtml
@@ -39,17 +39,18 @@
                         </li>
                         @if (SignInManager.IsSignedIn(User))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="ProductTypes" asp-action="Index">Product Types</a>
-                            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="ProductTypes" asp-action="Index">Product Types</a>
+            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Sell Something</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Details">View Cart</a>
-                            </li>
-
-                        }
+                                            <li class="nav-item">
+                                                <a class="nav-link text-dark" asp-area="" asp-controller="PaymentTypes" asp-action="Index">Add Payment Option</a>
+                                            </li>
+                                                            <li class="nav-item">
+                                                                <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Details">View Cart</a>
+                                                            </li>}
                     </ul>
                 </div>
             </div>
