--- a/Bangazon/Views/Products/Details.cshtml
+++ b/Bangazon/Views/Products/Details.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Bangazon.Models.Product
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+
 
 @{
     ViewData["Title"] = "Details";
@@ -16,7 +19,7 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class="col-sm-10">
-             Quantity Available
+            Quantity Available
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Quantity)
@@ -31,6 +34,13 @@
     </dl>
 </div>
 <div>
-    <a asp-controller="Products" asp-action="AddToCart" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Add To Order</a> |
-    <a asp-action="/ProductTypes/Types">Back</a>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <a asp-controller="Products" asp-action="AddToCart" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Add To Order</a>
+    }
+    else
+    {
+    <p>Please Login to Add this Product to your Shopping Cart</p>
+    }
+    <a asp-controller="ProductTypes" asp-action="Types">Back</a>
 </div>
