--- a/Bangazon/Views/Orders/Edit.cshtml
+++ b/Bangazon/Views/Orders/Edit.cshtml
@@ -10,8 +10,8 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<input type="hidden" asp-for="OrderId" />*@
-            @*<table class="table table-striped table-bordered">
+            <input type="hidden" asp-for="OrderId" />
+            <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
                         <th>
@@ -35,7 +35,7 @@
                         </tr>
                     }
                 </tbody>
-            </table>*@
+            </table>
             <div class="form-group">
                 <label asp-for="PaymentTypeId" class="control-label"></label>
                 <select asp-for="PaymentTypeId" class="form-control" asp-items="ViewBag.PaymentTypeId"></select>
